--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,20 @@
-<h1>The header</h1>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+    <a href="#" class="navbar-brand">Recipe book</a>
+    <div class="collapse navbar-collapse">
+      <ul class="navbar-nav">
+        <li class="nav-item"><a class="nav-link" href="#">Recipes</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">Shopping</a></li>
+      </ul>
+      <ul class="navbar-nav ml-auto">
+        <li class="dropdown">
+          <a href="#" class="nav-link dropdown-toggle" role="button">Manage</a>
+          <ul class="dropdown-menu">
+            <li class="nav-item"><a class="nav-link" href="#">Save data</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Fetch data</a></li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
