--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,3 +1,20 @@
-<p>
-  recipe-list works!
-</p>
+<div class="row">
+  <div class="col-12">
+    <button class="btn btn-success">New Recipe</button>
+  </div>
+</div>
+<hr>
+<div class="row">
+  <div class="col-12">
+    <a href="#" class="list-group-item list-group-item-action clearfix" *ngFor="let recipe of recipes">
+      <div class="float-left">
+        <h4>{{recipe.name}}</h4>
+        <p>{{recipe.description}}</p>
+      </div>
+      <div class="float-right">
+        <img [src]="recipe.imagePath" alt="{{ recipe.name }}" class="img-fluid" style="max-height:75px;">
+      </div>
+    </a>
+    <app-recipe-item></app-recipe-item>
+  </div>
+</div>
