--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,32 +1,36 @@
 <div class="row">
   <div class="col-12">
-    <img src="" alt="" class="img-fluid">
+    <img src="{{recipe.imagePath}}}" alt="" class="img-fluid">
   </div>
 </div>
 <div class="row">
   <div class="col-12">
-    <h1>Recipe name</h1>
+    <h1>{{ recipe.name }}</h1>
   </div>
 </div>
 <div class="row">
   <div class="col-12">
-    <div class="btn-group">
+    <div class="btn-group dropdown" appDropdown>
       <button type="button" class="btn btn-primary dropdown-toggle">Manage Recipe</button>
-      <ul class="dropdown-menu">
-        <li><a href="#">To Shopping List</a></li>
-        <li><a href="#">Edit Recipe</a></li>
-        <li><a href="#">Delete Recipe</a></li>
-      </ul>
+      <div class="dropdown-menu">
+        <a class="dropdown-item" (click)="onAddToShoppingList()" style="cursor:pointer">To Shopping List</a>
+        <a class="dropdown-item" href="#">Edit Recipe</a>
+        <a class="dropdown-item" href="#">Delete Recipe</a>
+      </div>
     </div>
   </div>
 </div>
 <div class="row">
   <div class="col-12">
-    Description
+    {{ recipe.description }}
   </div>
 </div>
 <div class="row">
   <div class="col-12">
-    Ingredients
+    <ul class="list-group">
+      <li class="list-group-item" *ngFor="let ingredient of recipe.ingredients">
+        {{ingredient.name}} - {{ingredient.amount}}
+      </li>
+    </ul>
   </div>
 </div>
