--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,3 +1,9 @@
-<p>
-  recipe-item works!
-</p>
+<a href="#" class="list-group-item list-group-item-action clearfix" (click)="onSelected()" >
+  <div class="float-left">
+    <h4>{{recipe.name}}</h4>
+    <p>{{recipe.description}}</p>
+  </div>
+  <div class="float-right">
+    <img [src]="recipe.imagePath" alt="{{ recipe.name }}" class="img-fluid" style="max-height:75px;">
+  </div>
+</a>
