--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -6,15 +6,6 @@
 <hr>
 <div class="row">
   <div class="col-12">
-    <a href="#" class="list-group-item list-group-item-action clearfix" *ngFor="let recipe of recipes">
-      <div class="float-left">
-        <h4>{{recipe.name}}</h4>
-        <p>{{recipe.description}}</p>
-      </div>
-      <div class="float-right">
-        <img [src]="recipe.imagePath" alt="{{ recipe.name }}" class="img-fluid" style="max-height:75px;">
-      </div>
-    </a>
-    <app-recipe-item></app-recipe-item>
+    <app-recipe-item *ngFor="let recipe of recipes" [recipe]="recipe"></app-recipe-item>
   </div>
 </div>
