--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,15 +3,15 @@
     <a href="#" class="navbar-brand">Recipe book</a>
     <div class="collapse navbar-collapse">
       <ul class="navbar-nav">
-        <li class="nav-item"><a class="nav-link" href="#" (click)="onSetCurrentPage('recipes')">Recipes</a></li>
-        <li class="nav-item"><a class="nav-link" href="#" (click)="onSetCurrentPage('shopping')">Shopping</a></li>
+        <li class="nav-item" routerLinkActive="active" ><a class="nav-link" [routerLink]="['/recipes']" >Recipes</a></li>
+        <li class="nav-item" routerLinkActive="active"><a class="nav-link" [routerLink]="['/shopping-list']"  >Shopping</a></li>
       </ul>
       <ul class="navbar-nav ml-auto">
         <li class="dropdown" appDropdown>
-          <a href="#" class="nav-link dropdown-toggle" role="button">Manage</a>
+          <a class="nav-link dropdown-toggle" role="button">Manage</a>
           <ul class="dropdown-menu">
-            <li class="nav-item"><a class="nav-link" href="#">Save data</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Fetch data</a></li>
+            <li class="nav-item"><a class="nav-link" style="cursor: pointer">Save data</a></li>
+            <li class="nav-item"><a class="nav-link" style="cursor: pointer">Fetch data</a></li>
           </ul>
         </li>
       </ul>
