--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -14,8 +14,8 @@
       <button type="button" class="btn btn-primary dropdown-toggle">Manage Recipe</button>
       <div class="dropdown-menu">
         <a class="dropdown-item" (click)="onAddToShoppingList()" style="cursor:pointer">To Shopping List</a>
-        <a class="dropdown-item" href="#">Edit Recipe</a>
-        <a class="dropdown-item" href="#">Delete Recipe</a>
+        <a class="dropdown-item" style="cursor: pointer" (click)="onEditRecipe()">Edit Recipe</a>
+        <a class="dropdown-item" style="cursor: pointer">Delete Recipe</a>
       </div>
     </div>
   </div>
