--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,4 +1,6 @@
-<a href="#" class="list-group-item list-group-item-action clearfix" (click)="onSelected()" >
+<a style="cursor: pointer" 
+  [routerLink]="[recipe.id]" routerLinkActive="active" 
+class="list-group-item list-group-item-action clearfix" >
   <div class="float-left">
     <h4>{{recipe.name}}</h4>
     <p>{{recipe.description}}</p>
