--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,5 +1,5 @@
 <a style="cursor: pointer" 
-  [routerLink]="[recipe.id]" routerLinkActive="active" 
+  [routerLink]="[index]" routerLinkActive="active" 
 class="list-group-item list-group-item-action clearfix" >
   <div class="float-left">
     <h4>{{recipe.name}}</h4>
