--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,6 +1,12 @@
 <div class="row">
   <div class="col-12 col-md-6 offset-md-3">
-    <form #authForm="ngForm" (ngSubmit)="onSubmit()">
+    <div class="alert alert-danger" *ngIf="error">
+      {{ error }}
+    </div>
+    <div *ngIf="isLoading" class="text-center">
+      <app-loading-spinner></app-loading-spinner>
+    </div>
+    <form #authForm="ngForm" (ngSubmit)="onSubmit()" *ngIf="!isLoading">
       <div class="form-group">
         <label for="email">E-Mail</label>
         <input type="email" id="email" class="form-control" ngModel required email name="email">
@@ -10,7 +16,7 @@
         <input type="password" id="password" class="form-control" ngModel required minlength="6" name="password">
       </div>
       <div>
-        <button class="btn btn-primary" type="submit" [disabled]="!authForm.valid">{{ isLoginMode ? 'Login' : 'Sign Up' }}</button> | 
+        <button class="btn btn-primary" type="submit" [disabled]="!authForm.valid">{{ isLoginMode ? 'Login' : 'Sign Up' }}</button> |
         <button class="btn btn-primary" type="button" (click)="onSwitchMode()">
             {{ isLoginMode ? 'Switch to Sign Up' : 'Switch to Login' }}
         </button>
