--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,11 +3,20 @@
     <a href="#" class="navbar-brand">Recipe book</a>
     <div class="collapse navbar-collapse">
       <ul class="navbar-nav">
-        <li class="nav-item" routerLinkActive="active" ><a class="nav-link" [routerLink]="['/recipes']" >Recipes</a></li>
-        <li class="nav-item" routerLinkActive="active"><a class="nav-link" [routerLink]="['/auth']"  >Authenticate</a></li>
-        <li class="nav-item" routerLinkActive="active"><a class="nav-link" [routerLink]="['/shopping-list']"  >Shopping</a></li>
+        <li class="nav-item" routerLinkActive="active" *ngIf="isAuthenticated">
+          <a class="nav-link" [routerLink]="['/recipes']" >Recipes</a>
+        </li>
+        <li class="nav-item" routerLinkActive="active" *ngIf="!isAuthenticated">
+          <a class="nav-link" [routerLink]="['/auth']"  >Authenticate</a>
+        </li>
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" [routerLink]="['/shopping-list']"  >Shopping</a>
+        </li>
       </ul>
       <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link" style="cursor: pointer" *ngIf="isAuthenticated">Logout</a>
+        </li>
         <li class="dropdown" appDropdown>
           <a class="nav-link dropdown-toggle" role="button">Manage</a>
           <ul class="dropdown-menu">
