--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -15,7 +15,7 @@
       </ul>
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="nav-link" style="cursor: pointer" *ngIf="isAuthenticated">Logout</a>
+          <a class="nav-link" style="cursor: pointer" *ngIf="isAuthenticated" (click)="onLogout()">Logout</a>
         </li>
         <li class="dropdown" appDropdown>
           <a class="nav-link dropdown-toggle" role="button">Manage</a>
